# uvaia

./: .gitignore  .gitmodules  .travis.yml  ChangeLog  Dockerfile  Makefile.am  Makefile.in  README  README.md  README_extra.md  autogen.sh  configure  configure.ac  configure~
WFA_bkp/: Makefile.am  Makefile.in  README.md
WFA_bkp/benchmark/: benchmark_utils.c  benchmark_utils.h
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
data/: 03.unique_acgt.aln.xz  03.unique_acgt.lineage_report.csv  04.sample_1_1k.names  04.sample_3_5k.names  04.samples_1_and_3.gisaid.tsv  README.md  o
recipe/: README.md  meta.yaml  super_sptree.def
src/: 2  Makefile.am  Makefile.in  align.c  ball.c  cluster.c  config.h.in  fastaseq.c  fastaseq.h  main.c  min_heap.c  min_heap.h  nearest.c  search_a.c  search_u.c  utils.c  utils.h  uvaia.c
